// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when not required renders the expected component with an optional tag 1`] = `
<div>
  <label
    class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
    data-garden-id="textfields.label"
    data-garden-version="3.7.0"
  >
    <strong>
      this is a label
    </strong>
     (optional)
  </label>
</div>
`;

exports[`when required renders the expected component 1`] = `
<div>
  <label
    class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
    data-garden-id="textfields.label"
    data-garden-version="3.7.0"
  >
    <strong>
      this is a label
    </strong>
  </label>
</div>
`;
